=================
Version 1.3.1.0
=================

Fixed Bugs:
- Fixed an error introduced in 1.3.0 with parsing notification.show() arguments resulting
  in not starting onButton scripts in certain calls.

=================
Version 1.3.0.0
=================

New Features:
- Added support for Lua scripts. Scene and notification scripts can load and
  run Lua scripts instead of JS. the script types can be mixed in a Project
  at will.
- Resources can be tagged. Those tags can be used in scripts for custom logic.
- Metronome volume and default SFX can be configured.
- Added the ability to export Projects as an archive from the editor.
- Added an editor tool to compress all images in a project, reducing the project's size.
- Added graphics options to optimize the Player and possibly prevent lag on older devices.

Changes:
- Code Editor supports Lua highlighting, code generation and debugging.
- Project exports now lock the UI for the duration of the Export, so nothing breaks.

Fixed Bugs:
- Fixed an error message in PlayerMediaPlayer that was reporting the wrong function call.
- Fixed bug with preventing RCC to export Projects properly.

=================
Version 1.2.6.0
=================

Fixed Bugs:
- Fixed the "mute" setting not muting Audio Resources in a JOIP-Project.
- Crashfix for certain unusual screen configurations.
- Crashfix for trying to enter an empty Kink.
- Fixed Kinks not being removable via "x" button.

=================
Version 1.2.5.0
=================

Changes:
- Updated tutorial to account for EOS scripts.
- Title Card decoration in Resource Detail View does not take away space
  from the actual image and is instead drawn over the image in the top
  left corner.

Fixed Bugs:
- Fixed initially opened script contents not showing in the Script Editor
  on application launch.
- Fixed the file browser opening outside the Project folder when trying to
  create a new script.
- Fixed desktop styles missing some updates that are present in Android