@@ -5,6 +5,8 @@ Version 1.3.1.0
 Fixed Bugs:
 - Fixed an error introduced in 1.3.0 with parsing notification.show() arguments resulting
   in not starting onButton scripts in certain calls.
+- Fixed a crash that occured when opening a project with an eos Script in first place
+  of the Script list.
 
 =================
 Version 1.3.0.0
